--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=05fcbf7e1af24c5d640219da9843a410&libraries=services&autoload=false"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
